data/derived/comb/progs/unify/prog3468.ml.out
Characters 73-85:
  | _ -> buildCosine (VarX, VarY)
                     ^^^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type expr
